Fixes action bar on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -720,6 +720,7 @@ footer{
     }
     .project-action{
         padding: 0 2em;
+        min-height: 130px;
     }
     .project-right{
         width: 100%;
